--- a/CognitoSampleApp/packages.config
+++ b/CognitoSampleApp/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="AWSSDK.CognitoIdentity" version="3.3.2.14" targetFramework="net461" />
   <package id="AWSSDK.CognitoIdentityProvider" version="3.3.10.4" targetFramework="net461" />
   <package id="AWSSDK.Core" version="3.3.24.3" targetFramework="net461" />
+  <package id="AWSSDK.Extensions.CognitoAuthentication" version="0.9.4" targetFramework="net461" />
+  <package id="AWSSDK.SecurityToken" version="3.3.2.3" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
