added GetCredentials to home controler

--- a/CognitoSampleApp/Web.config
+++ b/CognitoSampleApp/Web.config
@@ -18,7 +18,7 @@
     <add key="CLIENT_ID" value="79ak8507altt89b264cm6p5tgb" />
     <add key="USERPOOL_ID" value="eu-west-2_TLKlyceL5" />
     <add key="IDENITYPOOL_ID" value="eu-west-2:355f07a2-5861-4fcc-92c8-81ae2fc508eb" />
-    <!--<add key="IDENITY_PROVIDER" value="cognito-idp.eu-west-2.amazonaws.com/" />-->
+    <add key="IDENITY_PROVIDER" value="cognito-idp.eu-west-2.amazonaws.com/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
