--- a/CognitoSampleApp/packages.config
+++ b/CognitoSampleApp/packages.config
@@ -27,6 +27,9 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.10" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.8.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
@@ -34,5 +37,6 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
